@@ -1,4 +1,4 @@
-#	$NetBSD: CHANGES-1.5.4,v 1.1.2.11 2002/09/04 01:05:38 itojun Exp $
+#	$NetBSD: CHANGES-1.5.4,v 1.1.2.12 2002/09/04 01:13:05 itojun Exp $
 
 A complete list of changes from NetBSD 1.5.3 to NetBSD 1.5.4:
 
@@ -1276,3 +1276,10 @@ lib/libc/locale/setlocale.c			1.38-1.40
   argunemt and with a string containing many slashes for the second argument.
   This bug may cause setlocale() to destroy static datas.  exploitable
   under certain situation.
+
+usr.sbin/cron/database.c			1.5
+usr.sbin/cron/do_command.c			1.11
+  Instead of passing "*system*" as the fname to process_crontab()
+  for the system crontab file, pass a NULL pointer instead.  This
+  prevents someone from creating a "*system*" file in the tabs directory
+  that acts as an alternate root crontab.  from openbsd
